# skills

claude-agent-tutorial/: .env.example  .sandbox_id  README.md  chat_e2b_sdk.py  e2b_interactive_transport.py  main.py  pyproject.toml
claude-agent-tutorial/.claude/agents/: extract-style.md
claude-agent-tutorial/.claude/skills/nanobanana/: SKILL.md  nanobanana.py
claude-agent-tutorial/.claude/skills/pptx/scripts/: html2pptx.js
claude-agent-tutorial/agents/: __init__.py  claude_agent.py  gemini_agent.py
claude-agent-tutorial/tools/: __init__.py  gemini_tools.py  greet.py  registry.py  time_tools.py  weather.py
claude-agent-tutorial/ui/: __init__.py  display.py  tracker.py
claude-skills-starter/: README.md
claude-skills-starter/.claude/: CLAUDE.md.example
claudecode-agent-sdk-tutorial/: .env.example  .gitignore  1_query.py  README.md  main.py  pyproject.toml  tools.py
claudecode-template/: CLAUDE.md  settings.json
claudecode-template-plugin/: .gitignore
claudecode-template-plugin/.claude-plugin/: marketplace.json
claudecode-template-plugin/kiro-sdd/: README.md
claudecode-template-plugin/ui/: CLAUDE.md
claudecode-template/agents/: frontend-expert.md  kiro-plan.md  python-backend-expert.md  shadcn-ui-expert.md  technical-documentation-writer.md  vercel-ai-sdk-v5-expert.md
claudecode-template/hooks/: check_ai_commit.sh  formatter.sh
gefei-rewrite-skill/: SKILL.md
gefei-rewrite-skill/examples/: tech-tool-rewrite.md  youtube-retell.md
gefei-rewrite-skill/references/: banned-words.md  youtube-retell-template.md
(+22 files in other folders)
